# rust-cuda

./: Cargo.toml
.github/workflows/: ci_linux.yml  ci_windows.yml  container_images.yml
container/llvm7-rockylinux9/: Dockerfile
container/llvm7-ubuntu22/: Dockerfile
container/llvm7-ubuntu24/: Dockerfile
container/modal-ci/: Dockerfile
container/rockylinux9-cuda12/: Dockerfile
container/rockylinux9-cuda12-rocm6.4.3/: Dockerfile
container/rockylinux9-cuda12-rocm6.4.4/: Dockerfile
container/rockylinux9-cuda132/: Dockerfile
container/ubuntu22-cuda11/: Dockerfile
container/ubuntu22-cuda12/: Dockerfile
container/ubuntu24-cuda12/: Dockerfile
container/ubuntu24-cuda12-llvmdebug/: Dockerfile
container/ubuntu24-cuda132/: Dockerfile
crates/blastoff/: Cargo.toml
crates/cuda_builder/: Cargo.toml
crates/cuda_builder/src/: lib.rs
crates/cuda_std/: Cargo.toml
crates/cuda_std/src/: warp.rs
crates/cuda_std_macros/src/: lib.rs
crates/cudnn-sys/: Cargo.toml
crates/cudnn/src/: lib.rs
crates/cust/: Cargo.toml
crates/cust/src/: error.rs  function.rs  lib.rs  module.rs
crates/cust_derive/src/: lib.rs
crates/gpu_rand/src/: lib.rs
crates/nvvm/: Cargo.toml
crates/nvvm/src/: lib.rs
crates/optix/: Cargo.toml
crates/optix-sys/: Cargo.toml
crates/ptx_compiler/: Cargo.toml
crates/rustc_codegen_nvvm/: libintrinsics.bc  libintrinsics.ll
examples/: README.md
examples/sdot/: Cargo.toml  build.rs
examples/sdot/kernels/: Cargo.toml
examples/sdot/kernels/cuda/: sdot.cu
examples/sdot/kernels/src/: lib.rs
examples/sdot/src/: main.rs
(+32 files in other folders)
